[package]
name = "unreliable"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
crossbeam-channel.workspace = true
image.workspace = true
rayon.workspace = true
turbojpeg.workspace = true